# citadel-api

./: app.py  check_v2.py  render.yaml  simproof_diff.py  simproof_explain.py
criterion-stability-cli/: Cargo.toml  test.csv  unstable.csv
criterion-stability-cli/src/: criterion_parser.rs  main.rs  stability.rs
