[package]
name = "criterion-stability-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for benchmark ranking stability analysis"

[[bin]]
name = "criterion-stability"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
csv = "1.3"
rand = "0.8"
anyhow = "1.0"
